<resources>gin
    <string name="app_name">project_client</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    // Navigation Drawer String
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="guest">Guest</string>

    // Login Page String
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>

    // Register Page String
    <string name="prompt">Basic User Profile (* Must be completed)</string>
    <string name="register_email">Email *</string>
    <string name="register_password">Password *</string>
    <string name="password_again">Password(again) *</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone Number *</string>

    // EditText Error Message
    <string name="email_error_message">Email is required</string>
    <string name="password_error_message">Password is required</string>
    <string name="password_again_error_message">Password(again) is required</string>
    <string name="phone_no_error_message">Phone Number is required</string>

    <string name="not_email_format">Please provide correct email format</string>
    <string name="password_not_same">Password And Password(again) not same</string>

    <string name="identifier_error_message">Elderly Identifier is required</string>

    // Add Elderly Dialog Page String
    <string name="login_message">Please Login</string>
    <string name="elderly_identifier">Elderly Identifier</string>
    <string name="btn_add">ADD</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="repeat_error_message">You already register this identifier</string>

    // Elderly Detail Page String
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="gps_status">GPS Status</string>

    // Service String
    <string name="elderly_message">We do not get elderly any location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
