<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <LinearLayout
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <TextView
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/signup"
            android:id="@+id/tvSignUp"
            android:onClick="onClick">
        </TextView>


        <TextView
            android:layout_width="50sp"
            android:id="@+id/tvLogin"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:text="@string/login">
        </TextView>

    </LinearLayout>


    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/user_icon"
        android:id="@+id/imgUserIcon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:id="@+id/tvUserName"
        android:text="@string/guest"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail" />



</LinearLayout>
