<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="self.edu.project_client.viewpager.ElderlyDetailFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/elderly_original_icon_size"
            android:layout_height="@dimen/elderly_original_icon_size"
            android:src="@drawable/user_icon"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imgElderlyOriginalIcon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elderly_identifier"
                android:textStyle="bold"
                android:textSize="@dimen/elderly_detail_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvElderlyDetailIdentifier"
                android:layout_marginLeft="@dimen/elderly_textview_margin_left"
                android:textSize="@dimen/elderly_detail_text_size"/>
        </LinearLayout>

        <Switch
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gps_status"
            android:textStyle="bold"
            android:textSize="@dimen/elderly_detail_text_size"
            android:id="@+id/gpsSwitch"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textStyle="bold"
                android:textSize="@dimen/elderly_detail_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvElderlyDetailLat"
                android:layout_marginLeft="@dimen/elderly_textview_margin_left"
                android:textSize="@dimen/elderly_detail_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textStyle="bold"
                android:textSize="@dimen/elderly_detail_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvElderlyDetailLong"
                android:layout_marginLeft="@dimen/elderly_textview_margin_left"
                android:textSize="@dimen/elderly_detail_text_size"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
